Fix Creation/Deletion spacing and file system setup

--- a/src/styles/FileSystemNode.scss
+++ b/src/styles/FileSystemNode.scss
@@ -25,7 +25,7 @@
 }
 
 .node-label {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.85);
   border-radius: 0.3em;
   bottom: 20%;
   display: flex;
@@ -34,5 +34,5 @@
   height: 20%;
   justify-content: center;
   text-align: center;
-  width: 60%;
+  width: 100%;
 }
