--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -151,6 +151,7 @@ body {
 }
 
 .task-prompt {
+  margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
   text-align: left;
