--- a/src/styles/sideNav.scss
+++ b/src/styles/sideNav.scss
@@ -58,6 +58,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-menu {
   background: #6588cb;
   font-size: 1.15em;
+  line-height: 1.5rem;
   overflow-y: hidden !important;
   padding: 2.5em 1.5em 0;
   text-align: left;
